--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^3.4.4",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "ioredis": "^4.27.8",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -40,8 +42,10 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^3.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
